[tool.poetry]
name = "github-actions-sample"
version = "0.1.0"
description = ""
authors = ["ochevishche"]
readme = "README.md"
packages = [ { include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.4.4"
keyring = "^23.13.1"
keyrings-google-artifactregistry-auth = "1.0.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
